test/sc++/error/forall-array-ident.scpp
../../scc/error/forall-array-ident.sc